--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
   <meta name="description" content="" />
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 
