--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>The Paul and Jack Registry</title>
+  <title>The PJL Inventory Management System</title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
