--- a/templates/login.html
+++ b/templates/login.html
@@ -6,21 +6,21 @@
 
   <meta charset="UTF-8" />
 
-  <title>The Paul and Jack Registry</title>
+  <title>The PJL Inventory Management System</title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <meta name="description" content="" />
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 
 <body>
-  <header>
-      <h1>The Paul and Jack Registry</h1>
-  </header>
-
+	<div class="navbar">
+		<h3>PJL Inventory Management</h3>
+		
+	</div>
 
   <main class="content">
       <section class="login-box">
@@ -34,15 +34,16 @@
 
               <button type="submit">Login</button>
           </form>
-          <form method="POST" action="{{ url_for('registration') }}">
+          <form method="GET" action="{{ url_for('registration') }}">
             <button type="submit">Register!</button>
         </form>
       </section>
   </main>
 
   <footer>
-      <p>&copy; Paul & Jack, we deserve full points</p>
-  </footer>
+    <p>&copy; Paul, Luis & Jack, we deserve full points</p>
+</footer>
+
 
 
 </body>
