--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,55 +6,48 @@
 
   <meta charset="UTF-8" />
 
-  <title>The Paul and Jack Registry</title>
+  <title>The PJL Inventory Management System</title>
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <meta name="description" content="" />
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 
 <body>
-  <header>
-      <h1>The Paul and Jack Registry</h1>
-  </header>
-
+	<div class="navbar">
+		<h3>PJL Inventory Management</h3>
+		
+	</div>
 
   <main class="content">
-      <section class="login-box">
-          <h2>Register</h2>
-          <form method="POST" action="{{ url_for('register') }}">
-              <label for="username">Username:</label>
-              <input type="text" id="username" name="username" placeholder="Enter your username">
+	<section class="login-box">
+        <h2>Register</h2>
+        <form method="POST" action="{{ url_for('register') }}">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Enter your username">
 
-              <label for="password">Password:</label>
-              <input type="password" id="password" name="password" placeholder="Enter your password">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password">
 
-              <label for="passwordv">Confirm Password:</label>
-              <input type="password" id="passwordv" name="passwordv" placeholder="Confirm your password">
+            <label for="passwordv">Confirm Password:</label>
+            <input type="password" id="passwordv" name="passwordv" placeholder="Confirm your password">
 
-              <label for="password">User role:</label>
-              <select id="role" name="role" required>
-                    <option value="student">Student</option>
-                    <option value="teacher">Teacher</option>
-              </select>
-              
-
-
-
-              <button type="submit">Register</button>
-          </form>
-      </section>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" placeholder="Enter your Email">
+            
+            <button type="submit">Register</button>
+        </form>
+    </section>
   </main>
 
   <footer>
-      <p>&copy; Paul & Jack, we deserve full points</p>
+      <p>&copy; Paul, Luis & Jack, we deserve full points</p>
   </footer>
 
-  <script>
-  </script>
+  
 
 </body>
 
