--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body onload="getClasses(); getAllClasses()">
+<body onload="getInventory()">
 	<div class="navbar">
 		<h3>PJL Inventory Management</h3>
 		<nav>
@@ -52,7 +52,7 @@
 			  <th>Description</th>
 			</tr>
 		  </thead>
-		  <tbody>
+		  <tbody id="invtable">
 			<tr>
 			  <td>1</td>
 			  <td>{{ username }}</td>
@@ -88,10 +88,35 @@
 </body>
 
 	<script>
+
+		//Get Data
+		let getInventory = () => {
+			fetch('/getUserInventory', {
+				method: 'GET'
+			})
+			.then(res => res.json())
+			.then(data => {
+				var parentElement = document.getElementById('invtable');
+
+				while (parentElement.childNodes.length > 2) {
+					parentElement.removeChild(parentElement.firstChild);
+				}
+
+				console.log(data)
+				for(let key in data.user_inventory) {
+					const id = data.user_inventory[key]['id']
+					const itemname = data.user_inventory[key]['itemName']
+					const quantity = data.user_inventory[key]['quantity']
+					const description = data.user_inventory[key]['description']
+					const markup = `<tr><td>${id}</td><td>{{ username }}</td><td>${itemname}</td><td>${quantity}</td><td>${description}</td></tr>`
+
+					document.getElementById('invtable').lastElementChild.insertAdjacentHTML('beforebegin', markup)
+				}
+			})
+		}
 	 
 	 //Add row to table:
 	 function submitData() {
-		console.log("data")
 		const newRow = document.getElementById('editableRow');
 		const cells = newRow.getElementsByTagName('td');
 		const data = Array.from(cells).map(cell => cell.innerText);
@@ -103,6 +128,10 @@
 			'Content-Type': 'application/json'
 		}
 		})
+
+		document.getElementById('editableRow').innerHTML = `<td><button class="addrow" onclick="submitData()">Submit</button></td><td>{{ username }}</td><td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>`
+		
+		getInventory();
 	}
 	</script>
 </html>
