--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 		<div>
 			<label for="shareInv">Share Inventory with:</label>
 			<input type="text" id="shareInv" placeholder="Username">
-			<button onclick="share()">Apply Filters</button>
+			<button onclick="share()">Share!</button>
 		</div>
     </section>
   </main>
