--- a/templates/login.html
+++ b/templates/login.html
@@ -32,17 +32,17 @@
               <label for="password">Password:</label>
               <input type="password" id="password" name="password" placeholder="Enter your password">
 
-              <button type="submit">Login</button>
+              <button class="login-button" type="submit">Sign in</button>
           </form>
           <form method="GET" action="{{ url_for('registration') }}">
-            <button type="submit">Register!</button>
-        </form>
+            <button class="register-button" type="submit">Register!</button>
+          </form>
       </section>
   </main>
 
   <footer>
     <p>&copy; Paul, Luis & Jack, we deserve full points</p>
-</footer>
+  </footer>
 
 
 
