Added edits to shared inventories

--- a/templates/shared_inventory.html
+++ b/templates/shared_inventory.html
@@ -36,7 +36,7 @@
             <button onclick="resetFilters()">Reset Filters</button>
         </div>
         {% for shared_user, shared_inventory in shared_inventories.items() %}
-        <section class="Shared Inventory Table">
+        <section class="Shared Inventory Table" id="inventoryTable">
             <h2>{{ shared_user }}'s Shared Inventory</h2>
             <table>
                 <thead>
@@ -45,15 +45,17 @@
                         <th>ItemName</th>
                         <th>Quantity</th>
                         <th>Description</th>
+                        <th>Edit</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for item in shared_inventory %}
                     <tr>
                         <td>{{ item.id }}</td>
-                        <td>{{ item.itemName }}</td>
-                        <td>{{ item.quantity }}</td>
-                        <td>{{ item.description }}</td>
+                        <td contenteditable="true">{{ item.itemName }}</td>
+                        <td contenteditable="true">{{ item.quantity }}</td>
+                        <td contenteditable="true">{{ item.description }}</td>
+                        <td><button onclick="editRow(this)">Push Changes</button></td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -105,6 +107,21 @@
 			document.getElementById('itemName').value = '';
 			document.getElementById('minQuantity').value = '';
 		}
+
+        function editRow(button) {
+		var row = button.parentNode.parentNode;
+		var cells = row.getElementsByTagName("td");
+
+		var rowData = Array.from(cells).map(cell => cell.innerText);
+		
+        fetch('/edit_shared_row', {
+                method: 'PUT',
+                body: JSON.stringify(rowData),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+        }
 	</script>
 </body>
 
