changed button hover color

--- a/static/style.css
+++ b/static/style.css
@@ -120,6 +120,10 @@ form input {
   padding-bottom: 10px;
 }
 
+form label {
+  padding-top: 7px;
+}
+
 button:hover {
-  background-color: grey;
+  background-color: rgb(196, 195, 195);
 }
